# sub0

./: .gitignore  INSTALL.md  README.md  pyproject.toml  reproduce.sh  requirements.txt  setup.py
benchmarks/: bench_compute_path_iso_cuda_graph.py  bench_kernel_head_to_head.py
benchmarks/baselines/: bench_commvq_official.py  bench_kivi_ppl.py  bench_kvquant_official.py  bench_polarquant_official.py  bench_ppl_kivi_official.py  bench_qjl_official.py  bench_quarot_official.py
benchmarks/paper/: abl_rotation_multiseed.py  bench_capacity_grid.py  bench_capacity_sweep.py  format_paper_tables.py  gen_fig2_throughput.py  gen_tab_fig2_raw.py  gen_tab_memory.py  plot_colors.py
cda/: README.md  __init__.py  compressed_model.py  cuda_attention.py  cuda_attention_gqa.py  fused_attention.py
cda/algorithm/: __init__.py
cda/core/: __init__.py  cda_attn.py  compressed_generate.py
cda/eval/: __init__.py  ppl.py
cda_vllm/: .gitignore  README.md
cda_vllm_submission/: README.md  requirements.txt  setup.py
csrc/: cda_gqa_kernels.cu  setup_gqa.py
experiments/: bench_batch_serving.py  bench_batched_throughput.py  bench_breakdown.py  bench_cda_integrated_single.py  bench_e2e_unified.py  bench_gpu_roofline.py  bench_longbench_single.py  bench_longctx_ppl_topk.py  bench_memory_capacity.py  bench_niah_topk.py  bench_ppl_scale.py  bench_ppl_stable.py  bench_table5.py  benchmark_ppl.py  benchmark_speed.py
fpga_cda_v4.7/: Makefile  README.md
results/: README.md
supplementary/: .gitignore  INSTALL.md  LICENSE  README.md  reproduce.sh  requirements.txt
tests/: smoke_test.py
(+338 files in other folders)
